<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-141dp"
        tools:layout_editor_absoluteY="-105dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/menu_home" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="50dp"
                    android:layout_height="59dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/TitleBall"
                    android:src="@drawable/iconhome" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/new_rocker"
                    android:gravity="center"
                    android:text="@string/TitleHome"
                    android:textColor="#FF5722"
                    android:textSize="30sp" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_pokedex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/new_rocker"
                android:text="@string/CE_title"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="206dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="59dp" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_title"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="206dp"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="59dp" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/fragment_detail_xml"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </FrameLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </androidx.viewpager2.widget.ViewPager2>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>